fix: ajustes gerais
